tests/baselines/reference/assignToFn.errors.txt
assignToFn.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignToFn.ts(8,5): error TS2322: Type 'string' is not assignable to type '(n: number) => boolean'.


==== assignToFn.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface I {
    	f(n:number):boolean;
        }
    
        var x:I={ f:function(n) { return true; } };
    
        x.f="hello";
        ~~~
!!! error TS2322: Type 'string' is not assignable to type '(n: number) => boolean'.
    }
    